@@ -599,17 +599,18 @@ spl::shared_ptr<core::frame_producer> create_producer(
 		const core::frame_producer_dependencies& dependencies,
 		const std::vector<std::wstring>& params)
 {
-	const auto filename = env::template_folder() + params.at(0) + L".html";
-	const auto found_filename = find_case_insensitive(filename);
+	const auto filename			= env::template_folder() + params.at(0) + L".html";
+	const auto found_filename	= find_case_insensitive(filename);
+	const auto html_prefix		= boost::iequals(params.at(0), L"[HTML]");
 
-	if (!found_filename && !boost::iequals(params.at(0), L"[HTML]"))
+	if (!found_filename && !html_prefix)
 		return core::frame_producer::empty();
 
 	const auto url = found_filename 
 		? L"file://" + *found_filename
 		: params.at(1);
 		
-	if (!boost::algorithm::contains(url, ".") || boost::algorithm::ends_with(url, "_A") || boost::algorithm::ends_with(url, "_ALPHA"))
+	if (!html_prefix || boost::algorithm::ends_with(url, "_A") || boost::algorithm::ends_with(url, "_ALPHA"))
 		return core::frame_producer::empty();
 
 	return core::create_destroy_proxy(spl::make_shared<html_producer>(
